--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^24.1.2",
     "i18next-browser-languagedetector": "^8.0.2",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
